[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
# Note: setup.py provides Extension modules for proper wheel tags (cp3XX, win_amd64)

[project]
name = "openfrescopy"
version = "0.1.0"
description = "Python wrapper for OpenFresco hybrid simulation framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary - See LICENSE"}
authors = [
    {name = "Andreas Schellenberg", email = "andreas.schellenberg@gmx.net"},
    {name = "Yoshikazu Takahashi", email = "yos@catfish.dpri.kyoto-u.ac.jp"},
    {name = "Gregory L. Fenves", email = "fenves@berkeley.edu"},
    {name = "Stephen A. Mahin", email = "mahin@berkeley.edu"},
]
keywords = ["finite element", "hybrid simulation", "structural engineering",
            "openfresco", "opensees"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/aschellenberg74/OpenFresco"
Documentation = "https://github.com/aschellenberg74/OpenFresco"

[tool.setuptools]
# Map the root package: current directory "." contains openfrescopy package
packages = ["openfrescopy", "openfrescopy.openfresco", "openfrescopy.opensees"]

[tool.setuptools.package-dir]
"openfrescopy" = "."
"openfrescopy.openfresco" = "openfresco"
"openfrescopy.opensees" = "opensees"

[tool.setuptools.package-data]
# Include .pyd files in subpackages and shared DLLs in openfresco
# The setup.py build_ext command copies files from pyXXX/ directories during build
# Structure in wheel: openfrescopy/openfresco/{OpenFrescoPy.pyd, *.dll}, openfrescopy/opensees/{opensees.pyd}
"openfrescopy.openfresco" = ["*.pyd", "*.dll"]
"openfrescopy.opensees" = ["*.pyd"]

